--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "next-safe-action": "^7.9.3",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.0",
